fix: table column stretch issue

--- a/documentation/src/refine-theme/css/custom.css
+++ b/documentation/src/refine-theme/css/custom.css
@@ -92,6 +92,7 @@
 
 .refine-prose table {
     @apply prose-table:border-none;
+    @apply table
 }
 
 .refine-prose table tr {
